# SlimeuMQ

./: Cargo.toml  README.md
src/: game.rs  main.rs  simplecam.rs
src/effect/: mod.rs  tint.rs
src/game/: ai.rs  combat.rs  player.rs  resources.rs
src/game/agent/controller/: jump_air.rs  mod.rs  movement.rs
src/game/stage/: mod.rs  room.rs
src/gfx/: animation.rs  debug_info.rs  mod.rs
src/map/: tilemap.rs
src/phx/: gravity.rs  hitbox.rs  mod.rs  temp.rs
src/util/: camera.rs  input.rs  interpolation.rs  mod.rs  simplecam.rs  state_machine.rs  timer.rs
