[package]
name = "slimeu-mq"
version = "0.1.0"
authors = ["Rybek"]
edition = "2018"


[dependencies]

# framework
macroquad = {git="https://github.com/not-fl3/macroquad", rev="3645235"}
miniquad = { version = "=0.3.0-alpha.25" }

glam = {version = "0.9", features = ["scalar-math"] }

# ECS
legion = "0.4.0"

#hashmap
fxhash = "0.2.1"
enum-map = "0.6.3"

# logger
log = "0.4.11"

# collision
resphys = "0.1.0"
bitflags = "1.2.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
simple_logger = { version = "1.10"}

[target.'cfg(target_arch = "wasm32")'.dependencies]
web_logger = { version = "0.2" }