[package]
name = "slimeu-mq"
version = "0.1.0"
authors = ["Rybek"]
edition = "2018"

[features]
default = ["devtools"]

devtools = []

[dependencies]

# framework
macroquad = {git="https://github.com/not-fl3/macroquad", rev="9da9b4f"}
miniquad = { version = "=0.3.0-alpha.37" }

glam = {version = "0.9", features = ["scalar-math"] }

# ECS
legion = {version = "0.4.0", features = ["extended-tuple-impls"]}

#hashmap
fxhash = "0.2.1"
enum-map = "1.1.1"

# logger
log = "0.4.14"

# collision
resphys = "0.1.0"
bitflags = "1.3.2"

# tilemap
ldtk_rust = "0.5.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
simple_logger = { version = "1.13.0"}

[target.'cfg(target_arch = "wasm32")'.dependencies]
web_logger = { version = "0.2" }