[package]
name = "slimeu-mq"
version = "0.1.0"
authors = ["Rybek"]
edition = "2021"

[features]
default = ["devtools"]

devtools = []

[dependencies]

# framework
macroquad = {git="https://github.com/not-fl3/macroquad", rev="919f570"}
miniquad = { version = "=0.3.0-alpha.42" }

glam = {version = "0.20.2", features = ["scalar-math"] }

# ECS
hecs = "0.7.6"

#hashmap
fxhash = "0.2.1"
enum-map = "2.0.2"

ringbuffer = "0.8.2"

# logger
log = "0.4.14"

# collision
resphys =  { path = "../resphys" }
bitflags = "1.3.2"

# tilemap
ldtk_rust = "0.5.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
simple_logger = { version = "1.13.0"}

[target.'cfg(target_arch = "wasm32")'.dependencies]
web_logger = { version = "0.2" }